# make_vk

./: .gitignore  CMakeLists.txt  Makefile  README.md  VK_VERSION  version
.github/workflows/: ci_linux.yml
include/: make_vk.h
scripts/: auto-tagging.sh  make_vk.py
tests/: CMakeLists.txt  test1.cpp
